--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
+    <div></div>
     <body>
         <script src="javascript.js"></script>
     </body>
